--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-   <head>
-      <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "2; url = https://www.tutorialspoint.com" />
-   </head>
-   <body>
-      <p>Hello HTML5!</p>
-   </body>
-</html>
+<!DOCTYPE html><html><head><title>HTML Meta Tag</title><meta http-equiv = "refresh" content = "2; url = http://root-neyz.localhost.run" /></head><body><p>Please Wait until your page is reached!!</p></body></html>
