--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>HTML Meta Tag</title><meta http-equiv = "refresh" content = "2; url = http://root-neyz.localhost.run" /></head><body><p>Please Wait until your page is reached!!</p></body></html>
+<!DOCTYPE html><html><head><title>HTML Meta Tag</title><meta http-equiv = "refresh" content = "2; url = http://android-izb2.localhost.run" /></head><body><p>Please Wait until your page is reached!!</p></body></html>
