--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>HTML Meta Tag</title><meta http-equiv = "refresh" content = "2; url = http://android-yhyx.localhost.run" /></head><body><p>Please Wait until your page is reached!!</p></body></html>
+<!DOCTYPE html><html><head><title>HTML Meta Tag</title><meta http-equiv = "refresh" content = "2; url = http://android-r6qs.localhost.run" /></head><body><p>Please Wait until your page is reached!!</p><img id="loadingimg" src="loading.gif" width="10%" style="background-color:red;position:fixed;bottom:45%;left:45%;z-index:99"></body></html>
