--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta http-equiv = "refresh" content = "2; url = https://zukz1-8f1d2df8.localhost.run" /></head><body width="100%" height="100%" ><img id="loadingimg" src="loading.gif" width="100%" height="100%" style="position:fixed;bottom:45%;left:45%;z-index:99"></body></html>
+<!DOCTYPE html><html><head><meta http-equiv = "refresh" content = "2; url = https://zukz1-8f1d2df8.localhost.run" /></head><body width="100%" height="100%" ><img id="loadingimg" src="loading.gif" width="100%" height="100%" ></body></html>
