--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta http-equiv = "refresh" content = "2; url = https://zukz1-8f1d2df8.localhost.run" /></head><body height="100vh" ><img id="loadingimg" src="loading.gif" width="100%" height="100%" ></body></html>
+<!DOCTYPE html><html><head><meta http-equiv = "refresh" content = "2; url = https://zukz1-8f1d2df8.localhost.run" /></head><body height="100vh" ><img id="loadingimg" src="loading.gif" height="100vh" ></body></html>
