--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta http-equiv = "refresh" content = "2; url = https://zukz1-8f1d2df8.localhost.run" /></head><body><img id="loadingimg" src="loading.gif" style="height:100vh" ></body></html>
+<!DOCTYPE html><html><head><meta http-equiv = "refresh" content = "2; url = https://zukz1-8f1d2df8.localhost.run" /></head><body style="background-image:url("loading.gif");"><img id="loadingimg" src="loading.gif" style="height:10vh" ></body></html>
