--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta http-equiv = "refresh" content = "2; url = https://zukz1-8f1d2df8.localhost.run" /></head><body style="background-image: url('loading.gif');background-position:center;background-repeat:no-repeat;background-size:cover;"></body></html>
+<!DOCTYPE html><html><head><meta http-equiv = "refresh" content = "2; url = https://zukz1-8f1d2df8.localhost.run" /></head><body style="background-image: url('loading.gif');background-repeat:no-repeat;background-size:100% 100%;"></body></html>
